# psd

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh
src/: main.cc  qml.qrc
src/filters/: contrastfilter.cc  contrastfilter.h  filter.h  filterstack.cc  filterstack.h  gammafilter.cc  gammafilter.h  inversefilter.cc  inversefilter.h  logfilter.cc  logfilter.h  slidingwindowfilter.cc  slidingwindowfilter.h
src/filters/convolutions/: convolutionfilter.cc  convolutionfilter.h  gaussianfilter.h  laplacefilter.h  meanfilter.h  shiftfilter.h  sobelfilter.h
src/gui/: filterlistmodel.cc  filterlistmodel.h  imagecontroller.cc  imagecontroller.h
src/image/: image.cc  image.h
src/qml/: FilterSidebar.qml  Main.qml  MainToolBar.qml  ResizeHandle.qml  RotateHandle.qml
src/transformations/: rotation.h  scale.h  transformation.h  translation.h
src/types/: mat3x3.h  vec3.h
